test/expected/2k_typedef_i.out
struct S { struct S { typedef int Int; }; };
                  ^
19: error: "S": member has the same name as its enclosing struct
